--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nord-visual-studio-code",
-  "displayName": "Nord",
+  "name": "nord-visual-studio-code-leemhenson",
+  "displayName": "Nord-leemhenson",
   "description": "An arctic, north-bluish clean and elegant Visual Studio Code theme.",
   "version": "0.2.0",
   "publisher": "arcticicestudio",
@@ -56,7 +56,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Nord",
+        "label": "Nord-leemhenson",
         "uiTheme": "vs-dark",
         "path": "./themes/nord.json"
       }
